# community-anthropic-sdk-rust

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  justfile
.github/workflows/: ci.yml
crates/anthropic-client/: Cargo.toml
crates/anthropic-client/src/: batches.rs  client.rs  config.rs  error.rs  lib.rs  messages.rs  models.rs  pagination.rs  request.rs  request_options.rs  response.rs  stream.rs  transport.rs
crates/anthropic-mcp/: Cargo.toml
crates/anthropic-mcp/src/: lib.rs  tool.rs
crates/anthropic-types/: Cargo.toml
crates/anthropic-types/src/: batch.rs  cache.rs  content.rs  error.rs  lib.rs  message.rs  model.rs  pagination.rs  primitive.rs  stream.rs  tool.rs
