[workspace]
members = [
    "crates/anthropic-client",
    "crates/anthropic-mcp",
    "crates/anthropic-types",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Anthropic SDK Rust contributors"]
repository = "https://github.com/LudwigAJ/community-anthropic-sdk-rust"
homepage = "https://github.com/LudwigAJ/community-anthropic-sdk-rust"

[workspace.dependencies]
anthropic-types = { path = "crates/anthropic-types", version = "0.1.0" }
bytes = "1"
futures-util = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls", "webpki-roots", "gzip", "brotli", "deflate"] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = { version = "0.1", features = ["attributes"] }
url = "2.5"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
expect_used = "warn"
unwrap_used = "warn"
