[package]
name = "anthropic-mcp"
version = "0.1.0"
description = "Optional MCP (Model Context Protocol) conversion helpers for community-anthropic-sdk-rust."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/anthropic-mcp"
readme = "../../README.md"
keywords = ["anthropic", "claude", "mcp", "tools", "ai"]
categories = ["api-bindings"]
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anthropic-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
